# DynNexus

./: .flake8  .gitignore  pyproject.toml  readme.md
config/: config.yaml
scaleformer/: augmentations.py
scaleformer/scaleformer/: dataset.py  evaluation.py  modules.py  pipeline.py  scaleformer.py
scaleformer/utils/: __init__.py  data_utils.py  eval_utils.py  metrics_utils.py  train_utils.py
scripts/: evaluate.py  run_eval.sh  run_train.sh  train.py
